Changes to run with Java8.